jlink plugin to copy or sym link license files to another location